--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -b && nodemon dist/index.js"
+    "dev": "tsc -b && nodemon dist/index.js",
+    "compile":"tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +12,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@types/express": "^4.17.21",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.4"
+    
   }
 }
