--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && nodemon dist/index.js",
-    "compile":"tsc -b"
+    "compile": "tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,8 @@
     "@types/express": "^4.17.21",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
+    "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
-    
   }
 }
