--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "locatioin-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "tsc -b && nodemon dist/index.js",
     "compile": "tsc -b",
